<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity">
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:padding="20sp">
        <Button
          android:id="@+id/fullscreen_content"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Toggle Full Screen"
          android:textSize="20sp"
          android:textStyle="bold" />
        <TextView
          android:id="@+id/ID_STATUSTEXT"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text=""
          android:textSize="20sp"
          android:textStyle="bold" />
        <TextView
          android:id="@+id/ResponseText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text=""
          android:textSize="20sp"
          android:textStyle="bold" />
        <TextView
          android:id="@+id/motorText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/motor"
          android:textSize="20sp"
          android:textStyle="bold" />
        <EditText
          android:id="@+id/motor"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:inputType="number"/>
        <TextView
          android:id="@+id/travelText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/travel"
          android:textSize="20sp"
          android:textStyle="bold" />
        <EditText
          android:id="@+id/travel"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:inputType="number"/>=
        <TextView
          android:id="@+id/pictureText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/picture"
          android:textSize="20sp"
          android:textStyle="bold" />
        <EditText
         android:id="@+id/picture"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:inputType="number"/>
       <TextView
         android:id="@+id/travelPrompt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/travelPrompt"
         android:textSize="20sp"
         android:textStyle="bold" />
       <Spinner
         android:id="@+id/travelDirection"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10sp"
         android:entries="@array/travelDirection"
         android:prompt="@string/travelPrompt"/>

      <Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:onClick="onButtonClick" />
      <Button
        android:id="@+id/stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:onClick="onStopClick" />
    </LinearLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/forward"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:onClick="onForwardClick" />
            <Button
                android:id="@+id/backward"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backward"
                android:onClick="onBackwardClick" />
            <Button
              android:id="@+id/stop2"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/stop"
              android:onClick="onStopClick" />
            <Button
                android:id="@+id/take"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/take"
                android:onClick="onTakeClick" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
